--- a/res/layout/colitem.xml
+++ b/res/layout/colitem.xml
@@ -1,39 +1,39 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
-	<TextView
-	    android:id="@+id/pref"
-	    android:layout_width="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:orientation="vertical" android:layout_width="match_parent"
+	android:layout_height="match_parent">
+	<TextView 
 	    android:layout_height="wrap_content"
-	    android:layout_alignParentRight="true"
-	    android:layout_alignParentTop="true"
-	    android:layout_marginRight="39dp"
-	    android:padding="5dip"
-	    android:text="Price In England:"
-	    android:textSize="20sp" />
+		android:textAppearance="?android:attr/textAppearanceLarge"
+		android:layout_width="wrap_content">
+	    
+	</TextView>
+	<LinearLayout android:layout_height="wrap_content"
+		android:id="@+id/linearLayout1" 
+		android:layout_width="match_parent">
 
-	<TextView
-	    android:id="@+id/item"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_alignBaseline="@+id/price"
-	    android:layout_alignBottom="@+id/price"
-	    android:layout_alignParentLeft="true"
-	    android:layout_marginLeft="24dp"
-	    android:text="Item:" 
-	    android:textSize="20sp"/>
+		<TextView
+		    android:id="@+id/item"
+		    android:layout_height="wrap_content"
+			android:layout_width="30dip"
+		    android:layout_weight="1" >
 
-	<TextView
-	    android:id="@+id/price"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_alignParentTop="true"
-	    android:layout_marginRight="30dp"
-	    android:layout_toLeftOf="@+id/pref"
-	    android:padding="5dip"
-	    android:text="Price:"
-	    android:textSize="20sp" />
+		</TextView>
 
-</RelativeLayout>
+		<TextView
+		    android:id="@+id/price"
+		    android:layout_height="wrap_content"
+		    android:layout_weight="1"
+		    android:layout_width="50dip" >
+
+		</TextView>
+
+		<TextView
+		    android:id="@+id/pref"
+		    android:layout_width="50dip"
+		    android:layout_height="wrap_content"
+		    android:layout_weight="1">
+
+		</TextView>
+
+	</LinearLayout>
+</LinearLayout>
